fixed animation on safari and firefox

--- a/css/animation.css
+++ b/css/animation.css
@@ -7,3 +7,21 @@
     }
     
 }
+@-webkit-keyframes faidIn {
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+    }
+    
+}
+@-moz-keyframes faidIn {
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+    }
+    
+}
